# pulstarRust

./: .gitignore  Cargo.toml
profile/: Cargo.toml  CheatSheetSamply.txt  profile_input.toml  profile_input.toml.save  profile_input.yaml  profile_input_Joris.toml  profile_input_nadyagrid.toml  rasterized_star_1tp.parquet
profile/src/: intensity.rs  interpolate.rs  lib.rs  main.rs  nadialike_grids.rs  profile_mkr.rs  regresor_template.rs  utils.rs
profile/src/intensity/: define_parameter_space.rs  extract_intensity_fluxes.rs  parse_intensity_grids.rs
profile/src/intensity/parse_intensity_grids/: joris_grids.rs
profile/src/interpolate/: define_parameter_space.rs
profile/src/utils/: csv_to_ndarray.rs  read_toml.rs  read_yaml.rs
pulstar/: Cargo.toml  input_pulstar.txt  input_timepoints.txt  pulstar_input.toml
pulstar/src/: lib.rs  local_pulsation_velocity.rs  local_temperature_and_gravity.rs  main.rs  pulstar_mkr.rs  reference_frames.rs  utils.rs
pulstar/src/reference_frames/: displacement_derivatives.rs  implementations_for_coordinates.rs
pulstar/src/utils/: parse_file.rs  parse_input_file.rs  parse_string.rs  parse_value.rs  print_info.rs  write_grid_data.rs
pulstar_py/: Cargo.toml  profile_input.toml  pyproject.toml  toml_mkr.py
pulstar_py/src/: lib.rs  make_pulstar_input.rs
src/: auxilliary.rs  displacement.rs  lib.rs  sphericalharmonics.rs
temp_name_lib/: Cargo.toml
temp_name_lib/src/: interpolation.rs  joris_math.rs  lib.rs  star_physics.rs  type_def.rs  utils.rs
temp_name_lib/src/joris_math/: binomial.rs  geometry.rs  lnfac.rs  (+2 more)
(+20 files in other folders)
