[package]
name = "profile"
version = "0.1.0"
edition = "2024"

[dependencies]
temp_name_lib = {path = "../temp_name_lib"}
pulstar = {path = "../pulstar"}
nalgebra = "0.33.2"
ndarray = "0.16.1"
polars = { version = "0.49.1", features = ["lazy","parquet","csv","polars-io"]}
serde = "1.0"
toml = "0.9.2"